# ftg_rv

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: params.yaml  params_obs.yaml  params_opp.yaml
ftg_rv/: lap_timer_node.py  reactive_node.py
launch/: controller.launch.py  controller_obs.launch.py  controller_opp.launch.py  sim.launch.py  sim_obs.launch.py
maps/: SaoPaulo_obs_map.yaml
